<resources>
    <string name="app_name">Exlibris.net</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="pass_conf">password confirmation</string>
    <string name="have_acc">Already have account?</string>
    <string name="dont_have_acc">Do not have account?</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="resetpassTitle">Reset your password</string>
    <string name="enterEmail">Enter your email, where we send your password reset code.</string>
    <string name="enterResetCode">To reset your password please input here 6 numbers, which we send you on email.</string>
    <string name="reset_code">reset code</string>
    <string name="input_your_new_password">Input your new password</string>

    <string name="category">Categories</string>

    <string name="home_second">Home Second</string>

    <string name="menu_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="management_panel">Management panel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cart">Cart</string>
    <string name="cart">Cart</string>


</resources>
